2016-12-22  Charlie Zender  <zender@uci.edu>

	* Define new native type r_ntv with PRC=N and/or by default
	swnb2 works fine with PRC=D
	swnb2 and swnb3 fail in rbn_vec() with PRC=F and PRC=N (also triggers IEEE underflow and denormal)
	swnb3 fails with with PRC=F
	disotest3 passes all tests with PRC=F
	disotest3 fails all tests with PRC=D, PRC=N

	* disotest3 passes all tests when compiled with PRC=S

	* Copy swnb2.F90 to swnb3.F90 to migrate to DISORT3

2016-08-02  Charlie Zender  <zender@uci.edu>

	* Change real_tiny from 1.0e-10 to 1.0e-20

2016-06-13  Charlie Zender  <zender@uci.edu>

	* Fix bug in normalization of flx_ngt_TOA. Now lmn_ngt_TOA == lmn_bb_aa_ndr_TOA.

2016-05-27  Charlie Zender  <zender@uci.edu>

	* Allow command-line input of sfc_tpt and sfc_msv

2016-05-26  Charlie Zender  <zender@uci.edu>

	* Add bottom surface emissivity (default 1.0) BEMIS to DISORT and SWNB2

2016-05-20  Charlie Zender  <zender@uci.edu>

	* Verify everything works when str_nbr=plr_nbr. Yay!
	Fixes bug (negative reflectances and radiances) spotted by Xianwei Wang in ~2010
	It may also afix ~2008 bug comparing Adding/Doubling with DISORT reflectances
	Not sure, need to check

2016-05-16  Charlie Zender  <zender@uci.edu>

	* Add CIE 1951 Scotopic and 1988 revised Photopic luminosity curves

	* Add broadband and spectral luminance diagnostics

	* Verified illuminance calculations are reasonable, ~120000 lux brightest sunlight

	* Add and verify CIE luminosity function I/O. Ready to compute lumens!

2016-05-15  Charlie Zender  <zender@uci.edu>

	* Diagnose radiances from DISORT2 uu array, not deprecated DISORT1 u0u array

2016-05-09  Charlie Zender  <zender@uci.edu>

	* Add diagnostics for geoengineering study

2013-06-12  Charlie Zender  <zender@uci.edu>

	* Need to test how HITRAN 2012 changes swnb2 relative to HITRAN 2008

	* Updated ln_nbr_max, and re-ran htrn2nb on all SW-active gases	for swnb2

	* Verified swnb2 still works with HITRAN 2008
