@@ -583,7 +583,9 @@ ifeq (${OMP},Y)
  LDFLAGS += -lgomp -lpthread
 endif # endif OMP
 ifeq (${PRC},D)
- FFLAGS += -fdefault-real-8
+# https://gcc.gnu.org/onlinedocs/gfortran/Fortran-Dialect-Options.html
+# FFLAGS += -fdefault-real-8
+ FFLAGS += -fdefault-real-8 -fdefault-double-8
 else
  FFLAGS += 
 endif
