@@ -19826,7 +19826,7 @@ Allen, R.~J., S.~C. Sherwood, J.~R. Norris, and C.~S. Zender (2012), Recent Nort
   DOI =          {10.1016/j.jqsrt.2015.02.014},
   month = 	 {may},
   csznote =      {code at: http://lllab.phy.stevens.edu/disort}
-  annote = 	 {DISORT rt}
+  annote = 	 {DISORT3 DISORT rt}
 }
 
 @Article{STW96,
