@@ -1,3 +1,7 @@
+2016-12-23  Charlie Zender  <zender@uci.edu>
+
+	* Makefile: PRC=D compiles with -fdefault-real-8 -fdefault-double-8
+
 2012-11-02  Charlie Zender  <zender@uci.edu>
 
 	* Built with netCDF-fortran 4.2 and verified netCDF4 works fine
