@@ -1,3 +1,9 @@
+2016-12-23  Charlie Zender  <zender@uci.edu>
+
+	* Makefile: PRC=D compiles with -fdefault-real-8 -fdefault-double-8 (required for DISORT3)
+
+	* disotest and swnb3 work with above compile switch!
+
 2016-12-22  Charlie Zender  <zender@uci.edu>
 
 	* Define new native type r_ntv with PRC=N and/or by default
